@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1285086: Speed up urllib.quote and urllib.unquote for simple cases.
+
 - Issue #8688: Distutils now recalculates MANIFEST everytime.
 
 - Issue #5099: subprocess.Popen's __del__ method (and the methods it calls)
